--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
 
           <!-- Heading -->
           <div class="sidebar-heading">
-              Interface
+              Interfaces
           </div>
 
           <!-- Nav Item - Pages Collapse Menu -->
